# the-rust-lang-book

./: .gitignore  Cargo.toml  README.md
ch8/mean_and_mode/src/: main.rs
ch8/pig_latin/: Cargo.toml
ch8/pig_latin/src/: main.rs
ch8_mean_and_mode/: Cargo.toml
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
ownership/src/: main
